# sirius

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  vcpkg.json
.github/workflows/: dev-tests.yml
benchmarks/: CMakeLists.txt  bench_tiff_cpptiff.cpp  bench_tiff_sirius.cpp  bench_timer.hpp  setup_cpptiff.sh
bindings/: CMakeLists.txt
bindings/benchmarks/: bench_tiff.py
bindings/src/: bind_fft.cpp
cmake/: Dependencies.cmake  ProjectOptions.cmake  SIMD.cmake  StaticAnalysis.cmake
cmake/patches/: fix_nanobind_tensor.cmake
include/sirius/: constants.hpp  fft.hpp  fft_buffers.hpp  fft_common.hpp  fft_util.hpp  legacy_config.hpp  otf.hpp  preprocess.hpp  real_fft.hpp  sim_parameters.hpp  sim_reconstruction.hpp  tensor_util.hpp  tiff_io.hpp
src/: CMakeLists.txt  fft.cpp  fftw_internal.hpp  legacy_config.cpp  otf.cpp  preprocess.cpp  real_fft.cpp  sim_parameters.cpp  tiff_io.cpp
tests/: CMakeLists.txt  test_fft1d.cpp  test_fft_buffers.cpp  test_fft_util.cpp  test_otf.cpp  test_preprocess.cpp  test_real_fft.cpp  test_reconstruction.cpp  test_sim_parameters.cpp  test_tensor_util.cpp  test_tiff_io.cpp
tests/data/: config.txt  raw_proc.tif
