[build-system]
requires = [
    "scikit-build-core >=0.10",
    # TEMP: pin to nanobind master until the next release ships eigen/tensor.h.
    # Drop the `@<sha>` once a tagged release contains the header.
    "nanobind @ git+https://github.com/wjakob/nanobind@a835245fa0c8f6c8d06a25713562100464e95039",
]
build-backend = "scikit_build_core.build"

[project]
name = "sirius"
version = "0.0.1"
description = "SIRIUS - Structured Illumination Reconstruction and Image Utility Suite"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
authors = [
    { name = "Velat Kilic", email = "velatkilic@berkeley.edu" },
]

[project.urls]
Homepage = "https://github.com/abcucberkeley/sirius"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Map the in-tree Python package so editable installs read sources live and
# regular installs ship the same files. The C++ extension is still placed
# alongside it via `install(TARGETS _sirius_ext ...)` in CMakeLists.txt.
wheel.packages = ["bindings/python/sirius"]

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"


# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp39"

# Editable installs: do NOT auto-rebuild on import. Auto-rebuild calls back
# into CMake reconfigure, which requires the build env (nanobind, vcpkg deps)
# to still be present -- pip's isolated build env is torn down after install,
# so reconfigure would fail. Re-run `pip install -e .` after C++ changes,
# or build the in-tree dev tree directly with `cmake --build build/<preset>`.
[tool.scikit-build.editable]
rebuild = false

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run unittest to ensure that the package was correctly built
test-requires = ["numpy"]
test-command = "python -m unittest discover -s {project}/bindings/tests"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"